Updating online docs to reflect changes in last commit.
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/qfa@587 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/www/visTool/index.html
+++ b/www/visTool/index.html
@@ -51,13 +51,13 @@
 <hr></hr>
 <a name="doc"><h2>Documentation</h2></a>
 
-<p>Once the qfa package is installed, you can access detailed documentation for interVis by typing the following command into the R console (followed by pressing enter):</p>
+<p>Once the qfa package is installed, you can access detailed documentation by typing the following command into the R console (followed by pressing enter):</p>
 
 <code>
-vignette("iRVis")
+browseVignettes("qfa")
 </code>
 
-<p>This should open a webpage in your browser.</p>
+<p>Clicking on the iRVis HTML link should open a documentation webpage in your browser.  Alternatively, you can access an <a href="../docs/iRVis.html">online version</a> of the documentation.  Note that accessing documentation via R is more likely to match the installed version of your qfa package.</p>
 
 </article>
 
