--- a/www/index.html
+++ b/www/index.html
@@ -40,7 +40,7 @@
 <h4>Other software</h4>
 <ul>
 	<li><a href="http://research.ncl.ac.uk/colonyzer">Colonyzer</a></li>
-	<li><a href="http://bioinf1.ncl.ac.uk/qfa">QFAViz</a></li>
+	<li><a href="http://bsu-srv.ncl.ac.uk/dixy/viz/">DIXY</a></li>
 </ul>
 
 <h4>References</h4>
