--- a/www/index.html
+++ b/www/index.html
@@ -9,15 +9,10 @@
 </head> 
 
 <body>
- 
-<header>
-<a href="http://www.flickr.com/photos/conchur/8187964744/" title="FourCulturesCropped by Conor Lawless, on Flickr">
-<img src="http://farm9.staticflickr.com/8489/8187964744_583f1264b2_m.jpg" width="15%" alt="FourCulturesCropped" style="display: inline; float:left; margin-right: 5px; margin-bottom: 30px;"></a>
-<h1>qfaR: tools for Quantitative Fitness Analysis</h1> 
-<hr></hr>
-</header>
 
 <nav id="nav">
+<a href="http://www.flickr.com/photos/conchur/8187964744/" title="FourCulturesCropped by Conor Lawless, on Flickr">
+<img src="https://farm9.staticflickr.com/8489/8187964744_83623ca2c2_z_d.jpg" alt="FourCulturesCropped"></a>
 <h4>Contents</h4>
 <ul>
 	<li><a href="#intro">Introduction</a></li>
@@ -62,6 +57,9 @@
 </nav>
 
 <article id="main">
+<h1>qfaR: tools for Quantitative Fitness Analysis</h1> 
+<hr></hr>
+
 <a name="intro"><h2>Introduction</h2></a>
 <p>This page describes how to install and use an <a href="http://cran.r-project.org/">R</a> package for carrying out quantitative fitness analysis (<a href="http://research.ncl.ac.uk/qfa">QFA</a>) of the growth of microbial cultures arrayed on a solid agar surface.  A more detailed description of QFA and the motivation for carrying out these experiments and subsequent analysis can be found on the <a href="http://research.ncl.ac.uk/qfa">QFA website</a>.</p>
 
@@ -220,6 +218,10 @@ Finally, we can launch a demo of the interactive <a href="visTool">visualisation
 
 <p>One such function, the qfaR visualisation tool, generates interactive scatterplots for browsing genome-wide fitness comparisons.  To use this tool, please see the documentation which can be found on the <a href="visTool">visualisation tool website</a>.</p>
 </article>
+
+<footer id="footer">
+<p>Copyright &copy; <a href="https://www.staff.ncl.ac.uk/conor.lawless/">Conor Lawless</a><br>Last edited: June 2015</p>
+</footer>
 
 </body> 
 </html> 
